--- a/src/assets/styles/base/_fonts.scss
+++ b/src/assets/styles/base/_fonts.scss
@@ -10,7 +10,8 @@
 @font-face {
   font-family: 'Northwell';
   src: url('~fonts/Northwell.woff2') format('font-woff2'),
-    url('~fonts/Northwell.woff') format('font-woff');
+    url('~fonts/Northwell.woff') format('font-woff'),
+    url('~fonts/Northwell.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
   font-display: swap;
