--- a/src/assets/styles/blocks/_paralax.scss
+++ b/src/assets/styles/blocks/_paralax.scss
@@ -2,6 +2,10 @@
   width: 100%;
   height: 90vh;
   overflow: hidden;
+
+  @include media-tablet {
+    height: 100vh;
+  }
 }
 
 .parallax__wrapper {
