--- a/src/assets/styles/layouts/_header.scss
+++ b/src/assets/styles/layouts/_header.scss
@@ -1,5 +1,7 @@
 .page__body--lock .page-header {
-  background-color: $gray-light;
+  @include media-mobile-only {
+    background-color: $gray-light;
+  }
 }
 
 .page-header {
