--- a/src/assets/styles/blocks/_paralax.scss
+++ b/src/assets/styles/blocks/_paralax.scss
@@ -1,4 +1,8 @@
 .parallax {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 90vh;
   overflow: hidden;
@@ -9,10 +13,48 @@
 }
 
 .parallax__wrapper {
+  position: absolute;
   width: 100%;
   height: 100%;
 
   background-image: url("~images/img_1.png");
   background-size: cover;
   background-position: 50%;
+}
+
+.parallax__title {
+  z-index: 5;
+  text-align: center;
+  line-height: 1.4;
+  color: $white;
+
+  & br {
+    @include media-tablet {
+      display: none;
+    }
+  }
+
+  & span {
+    position: relative;
+    margin-right: 5rem;
+
+    & strong {
+      position: absolute;
+      top: 0.7rem;
+      left: 3.5rem;
+
+      font-family: "Northwell";
+      @include font($size: 4.2rem, $weight: 400);
+      white-space: nowrap;
+      color: $danger;
+
+      transform: translateY(-55%) rotate(-16deg);
+
+      @include media-tablet {
+        top: 1.4rem;
+        left: 5rem;
+      }
+    }
+
+  }
 }
