--- a/src/assets/styles/layouts/_main-nav.scss
+++ b/src/assets/styles/layouts/_main-nav.scss
@@ -3,7 +3,14 @@
     flex-basis: 66%;
   }
 }
+
 .main-nav--opened {
+  .main-nav__toggle {
+    &:hover {
+      transform: rotate(90deg);
+    }
+  }
+
   & .main-nav__toggle::before {
     top: 45%;
     transform: rotate(45deg);
@@ -34,6 +41,7 @@
     display: block;
     width: 2.5rem;
     height: 2.5rem;
+    transition: transform .3s ease-out;
 
     &::before,
     &::after {
@@ -62,7 +70,7 @@
   @include media-mobile-only {
     position: fixed;
     left: 0;
-
+    align-items: center;
     display: none;
     width: 100%;
     height: 100%;
@@ -115,20 +123,70 @@
 .main-nav__item {
   @include media-mobile-only {
     opacity: 0;
-    transform: matrix(1.5, 0, 0, 1, 0, 0);
+    transform: matrix(1.5, 0, 0, 1, 0, 20);
   }
 }
 
 .main-nav__link {
+  position: relative;
+
   display: inline-block;
   padding: 1rem;
+
   font-size: 1.82rem;
   text-decoration: none;
+  white-space: nowrap;
+  color: $white;
 
   @include media-tablet {
     font-size: 0.9rem;
   }
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 70%;
+    left: 15px;
+
+    height: 1px;
+    width: calc(100% - 30px);
+
+    background-color: $white;
+    transform: scale(0);
+
+    transition: transform .4s ease-out;
+  }
+
+  &:hover::after {
+    transform: scale(1);
+  }
+}
+
+.main-nav__book-link {
+  position: relative;
+  padding: 1rem;
+
+  @include font($size: 0.9rem, $weight: bold);
+  text-decoration: none;
+  white-space: nowrap;
   color: $white;
+
+  &::after {
+    content: "";
+    position: absolute;
+    top: 70%;
+    left: 10px;
+
+    height: 2px;
+    width: calc(100% - 20px);
+
+    background-color: $danger;
+    transition: transform .4s ease-out;
+  }
+
+  &:hover::after {
+    transform: scale(0);
+  }
 }
 
 @keyframes show {
