feat: add constant

--- a/src/assets/styles/abstract/_constants.scss
+++ b/src/assets/styles/abstract/_constants.scss
@@ -4,6 +4,7 @@ $blue: #1d589f;
 $indigo: #6610f2;
 $purple: #6f42c1;
 $pink: #e83e8c;
+$red-light: #e5dede;
 $red: #f95b5b;
 $orange: #fd7e14;
 $yellow: #ffc107;
