--- a/src/assets/styles/base/_fonts.scss
+++ b/src/assets/styles/base/_fonts.scss
@@ -1,5 +1,5 @@
 @font-face {
-  font-family: 'Noe Display';
+  font-family: "Noe Display";
   src: url('~fonts/NoeDisplay-Bold.woff2') format('font-woff2'),
     url('~fonts/NoeDisplay-Bold.woff') format('font-woff');
   font-weight: normal;
@@ -8,7 +8,7 @@
 }
 
 @font-face {
-  font-family: 'Northwell';
+  font-family: "Northwell";
   src: url('~fonts/Northwell.woff2') format('font-woff2'),
     url('~fonts/Northwell.woff') format('font-woff'),
     url('~fonts/Northwell.ttf') format('truetype');
@@ -18,7 +18,7 @@
 }
 
 @font-face {
-  font-family: 'Poppins';
+  font-family: "Poppins";
   src: url('~fonts/Poppins-Regular.woff2') format('font-woff2'),
     url('~fonts/Poppins-Regular.woff') format('font-woff');
   font-weight: normal;
@@ -27,7 +27,7 @@
 }
 
 @font-face {
-  font-family: 'Sofia Pro';
+  font-family: "Sofia Pro";
   src: url('~fonts/SofiaPro-Regular.woff2') format('font-woff2'),
     url('~fonts/SofiaPro-Regular.woff') format('font-woff');
   font-weight: normal;
