--- a/src/assets/styles/blocks/_start-screen.scss
+++ b/src/assets/styles/blocks/_start-screen.scss
@@ -1,10 +1,13 @@
-.parallax {
+.start-screen {
   position: relative;
+
   display: flex;
   justify-content: center;
   align-items: center;
+
   width: 100%;
   height: 90vh;
+
   overflow: hidden;
 
   @include media-tablet {
@@ -12,18 +15,19 @@
   }
 }
 
-.parallax__wrapper {
+.start-screen__wrapper {
   position: absolute;
   width: 100%;
   height: 100%;
 
-  background-image: url("~images/img_1.png");
+  background-image: url("~images/bg-main.png");
   background-size: cover;
   background-position: 50%;
 }
 
-.parallax__title {
+.start-screen__title {
   z-index: 5;
+
   text-align: center;
   line-height: 1.4;
   color: $white;
@@ -43,18 +47,10 @@
       top: 0.7rem;
       left: 3.5rem;
 
-      font-family: "Northwell";
-      @include font($size: 4.2rem, $weight: 400);
-      white-space: nowrap;
-      color: $danger;
-
-      transform: translateY(-55%) rotate(-16deg);
-
       @include media-tablet {
         top: 1.4rem;
         left: 5rem;
       }
     }
-
   }
 }
