feat: add constant

--- a/src/assets/styles/abstract/_constants.scss
+++ b/src/assets/styles/abstract/_constants.scss
@@ -14,6 +14,7 @@ $cyan: #17a2b8;
 $white: #fff;
 $gray-light: #c1c9d0;
 $gray: #6c757d;
+$gray-middle: #666;
 $gray-dark: #343a40;
 $primary: #1d589f;
 $secondary: #6c757d;
