--- a/src/assets/styles/base/_global.scss
+++ b/src/assets/styles/base/_global.scss
@@ -41,6 +41,9 @@ img {
 }
 
 .page__body {
+  max-width: 100%;
+  overflow-x: hidden;
+
   font-family: $font-family--poppins;
   @include font ($size: 1rem, $height: 1.5);
 
