--- a/src/assets/styles/blocks/_acquaintance.scss
+++ b/src/assets/styles/blocks/_acquaintance.scss
@@ -172,16 +172,36 @@
   @include media-tablet {
     position: static;
     margin-bottom: 5rem;
+
+    @include font($size: 3.6rem, $height: 1.4, $weight: 600);
   }
 }
 
 .acquaintance__subtitle {
+  display: flex;
+  align-items: center;
+  padding: 0 2rem;
+
   @include font($size: 1rem, $height: 1.5, $weight: 600);
   text-transform: uppercase;
   color: $white;
 
   @include media-tablet {
+    width: 290px;
     padding-left: 3rem;
+  }
+}
+
+.acquaintance__link {
+  font-family: "Northwell";
+  @include font($size: 6rem, $weight: 300);
+  text-decoration: none;
+  color: $danger;
+
+  @include media-tablet {
+    position: absolute;
+    bottom: -10%;
+    left: 30%;
   }
 }
 
