--- a/src/assets/styles/blocks/_two-images.scss
+++ b/src/assets/styles/blocks/_two-images.scss
@@ -11,7 +11,7 @@
     width: 43vw;
 
     transform: translateX(100px);
-    transition: 1s ease-out;
+    transition: transform 1s ease-out;
 
     &._active {
       transform: translateX(0);
@@ -56,7 +56,7 @@
   background-size: cover;
 
   transform: scale(2);
-  transition: 1s ease-out;
+  transition: transform 1.5s ease-out;
 }
 
 .two-images__layer-1 {
