feat: import styles

--- a/src/assets/styles/blocks/_index.scss
+++ b/src/assets/styles/blocks/_index.scss
@@ -1,3 +1,6 @@
 @import "./start-screen";
 @import "./acquaintance";
 @import "./two-images";
+@import "./feature";
+@import "./service";
+@import "./products";
