feat: add constants

--- a/src/assets/styles/abstract/_constants.scss
+++ b/src/assets/styles/abstract/_constants.scss
@@ -28,7 +28,8 @@ $dark: #343a40;
 // Font-family
 $font-family--poppins: "Poppins", sans-serif;
 $font-family--noe: "Noe Display", sans-serif;
-
+$font-family--northwell: "Northwell", sans-serif;
+$font-family--sofia: "Sofia Pro", sans-serif;
 // Variables
 $min-width: 300px;
 $content-width: 1280px;
