--- a/src/assets/styles/components/_page-link.scss
+++ b/src/assets/styles/components/_page-link.scss
@@ -1,9 +1,8 @@
-.book-link {
+.page-link {
   position: relative;
-  padding: 1rem;
 
   display: inline-block;
-  align-self: center;
+  padding: 1rem;
 
   @include font($size: 1rem);
   text-decoration: none;
