feat: add styles

--- a/src/assets/styles/blocks/_acquaintance.scss
+++ b/src/assets/styles/blocks/_acquaintance.scss
@@ -47,12 +47,16 @@
 
 .acquaintance__layers {
   position: relative;
+  z-index: 2;
+
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
 .layers-acquaintance__layer-1 {
+  position: relative;
+
   height: 100vw;
   width: 75vw;
   margin-left: 2rem;
@@ -65,6 +69,7 @@
   @include media-tablet {
     height: 48vw;
     width: 33vw;
+    margin-left: 0;
 
     transform: translate(0px, 100px);
     transition: transform .4s ease-out;
@@ -132,6 +137,8 @@
 
 .acquaintance__desc {
   position: relative;
+  z-index: 3;
+
   padding-top: 7rem;
 
   @include media-tablet {
@@ -200,8 +207,45 @@
 
   @include media-tablet {
     position: absolute;
-    bottom: -10%;
-    left: 30%;
+
+.acquaintance__img {
+  position: absolute;
+  z-index: 1;
+
+  &--group {
+    top: 2rem;
+    left: 2rem;
+
+    height: 70vw;
+    width: auto;
+
+    @include media-tablet {
+      top: 8rem;
+      left: 10rem;
+
+      height: 18vw;
+    }
+
+    @include media-desktop {
+      left: 12rem;
+    }
+  }
+
+  &--dots {
+    display: none;
+
+    @include media-tablet {
+      top: 20rem;
+      left: 41rem;
+
+      display: block;
+      height: 5vw;
+      width: auto;
+    }
+
+    @include media-desktop {
+      left: 49rem;
+    }
   }
 }
 
