--- a/src/assets/styles/base/_global.scss
+++ b/src/assets/styles/base/_global.scss
@@ -5,32 +5,73 @@
 }
 
 html {
-  font-size: 15px;
-}
-
-body {
-  // display: grid;
-  // grid-template-rows: min-content 1fr min-content;
-  height: 100vh;
-  width: 100%;
   min-width: $min-width;
-}
+  max-width: 100%;
 
-h1,
-h2,
-h3,
-h4 {
-  margin: 0;
-  font-family: $font-family--noe;
+  font-size: 15px;
 
-  @include font($size: 1.8rem);
+  @media (min-width: 576px) {
+    font-size: 3vw;
+  }
 
   @include media-tablet {
-    @include font($size: 2.6rem);
+    font-size: 1.5vw;
   }
 
   @include media-desktop {
-    @include font($size: 3rem);
+    font-size: 1.25vw;
+  }
+}
+
+h1 {
+  margin: 0;
+  font-family: $font-family--poppins;
+  @include font($size: 1.8rem, $height: 1.4);
+  color: $white;
+
+  @include media-tablet {
+    font-size: 2.6rem;
+  }
+
+  @include media-desktop {
+    font-size: 3rem;
+  }
+}
+
+h2 {
+  margin: 0;
+  font-family: $font-family--noe;
+  @include font($size: 2.6rem, $height: 1.1);
+  color: $white;
+
+  @include media-tablet {
+    font-size: 3.6rem;
+    line-height: 1.2;
+  }
+}
+
+h3 {
+  margin: 0;
+  font-family: $font-family--poppins;
+  @include font($size: 2.2rem, $height: 1.1);
+  color: $white;
+
+  @include media-tablet {
+    font-size: 2.6rem;
+    line-height: 1.4;
+  }
+}
+
+h4 {
+  margin: 0;
+  font-family: $font-family--noe;
+  @include font($size: 2rem, $height: 1.1);
+  letter-spacing: 0.1rem;
+  color: $white;
+
+  @include media-tablet {
+    font-size: 1.5rem;
+    line-height: 1.4;
   }
 }
 
@@ -41,17 +82,10 @@ img {
 }
 
 .page__body {
-  max-width: 100%;
-  overflow-x: hidden;
-
   font-family: $font-family--poppins;
   @include font ($size: 1rem, $height: 1.5);
 
   @include media-tablet {
-    font-size: 1.8rem;
-  }
-
-  @include media-desktop {
     font-size: 1.8rem;
   }
 
@@ -60,6 +94,10 @@ img {
       overflow: hidden;
     }
   }
+}
+
+.page-main {
+  overflow: hidden;
 }
 
 .visually-hidden {
