--- a/src/assets/styles/blocks/_start-screen.scss
+++ b/src/assets/styles/blocks/_start-screen.scss
@@ -7,7 +7,6 @@
 
   width: 100%;
   height: 90vh;
-
   overflow: hidden;
 
   @include media-tablet {
@@ -15,22 +14,10 @@
   }
 }
 
-.start-screen__wrapper {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-
-  background-image: url("~images/bg-main.png");
-  background-size: cover;
-  background-position: 50%;
-}
-
 .start-screen__title {
   z-index: 5;
-
+  padding: 0 1rem;
   text-align: center;
-  line-height: 1.4;
-  color: $white;
 
   & br {
     @include media-tablet {
@@ -51,6 +38,25 @@
         top: 1.4rem;
         left: 5rem;
       }
+
+      @include media-desktop {
+        top: 2rem;
+        left: 6rem;
+      }
+    }
+  }
+
+  &--mobile {
+    @include media-tablet {
+      display: none;
+    }
+  }
+
+  &--tablet {
+    display: none;
+
+    @include media-tablet {
+      display: block;
     }
   }
 }
