--- a/src/assets/styles/blocks/_two-images.scss
+++ b/src/assets/styles/blocks/_two-images.scss
@@ -62,18 +62,17 @@
 }
 
 .two-images__layer-1 {
-  background-image: url("~images/img-mood-1.jpg");
+  background-image: url("~images/two-images/img-mood-1.jpg");
 }
 
 .two-images__layer-2 {
-  background-image: url("~images/img-mood-2.jpg");
+  background-image: url("~images/two-images/img-mood-2.jpg");
 }
 
-
 .two-images__layer-3 {
-  background-image: url("~images/img-mood-3.jpg");
+  background-image: url("~images/two-images/img-mood-3.jpg");
 }
 
 .two-images__layer-4 {
-  background-image: url("~images/img-mood-4.jpg");
+  background-image: url("~images/two-images/img-mood-4.jpg");
 }
