--- a/src/assets/styles/blocks/_acquaintance.scss
+++ b/src/assets/styles/blocks/_acquaintance.scss
@@ -1,47 +1,12 @@
 .acquaintance {
   position: relative;
+  padding-top: 5rem;
+  padding-bottom: 2.5rem;
 
-  &::before {
-    content: "";
-    position: absolute;
-    top: 0;
-    left: 0;
-    z-index: -2;
-    height: 100%;
-    width: 100%;
+  background-color: $red-light;
 
-    background-color: $red-light;
-  }
-
-  &::after {
-    content: "";
-    position: absolute;
-    top: 2rem;
-    left: 2rem;
-    z-index: -1;
-
-    height: 70vw;
-    width: 80%;
-
-    background-image: url("~images/grey-green-group.png");
-    background-repeat: no-repeat;
-    background-size: contain;
-
-    @include media-tablet {
-      top: 19%;
-      left: 15%;
-
-      height: 18vw;
-    }
-  }
-
-  & .wrapper {
-    padding-top: 5rem;
+  @include media-tablet {
     padding-bottom: 5rem;
-
-    @include media-tablet {
-      position: relative;
-    }
   }
 }
 
@@ -61,7 +26,7 @@
   width: 75vw;
   margin-left: 2rem;
 
-  background-image: url("~images/hands.jpg");
+  background-image: url("~images/acquaintance/hands.jpg");
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
@@ -83,11 +48,11 @@
 .layers-acquaintance__inner {
   position: absolute;
   top: 70%;
-  left: 1rem;
+  left: -2rem;
 
   @include media-tablet {
-    top: 15%;
-    left: 15%;
+    top: 20%;
+    left: -50%;
   }
 }
 
@@ -97,7 +62,7 @@
   width: 44vw;
   height: 44vw;
 
-  background-image: url("~images/cheek.jpg");
+  background-image: url("~images/acquaintance/cheek.jpg");
   background-repeat: no-repeat;
   background-position: 50%;
   background-size: cover;
@@ -143,7 +108,7 @@
 
   @include media-tablet {
     position: absolute;
-    top: 15%;
+    top: 18%;
     left: 65%;
 
     padding: 0;
@@ -152,61 +117,62 @@
 
 .acquaintance__title {
   position: absolute;
-  top: -50%;
+  top: -20%;
   left: 40%;
 
   display: flex;
   flex-direction: column;
 
-  @include font($size: 2.5rem, $weight: 600);
-  font-family: "Noe Display";
-  color: $white;
-
   & span {
     opacity: 0;
     transform: translate(0px, 300%);
-    transition: all .4s ease-out;
+    transition: translate .4s ease-out, opacity 2s ease-out;
   }
 
   &._active {
     @for $i from 1 to 3 {
       span:nth-of-type(#{$i}) {
-        animation: slideup .5s .01s + $i/8 forwards;
+        animation: slideup .5s .01s + $i/7 forwards;
       }
     }
   }
 
   @include media-tablet {
     position: static;
-    margin-bottom: 5rem;
-
-    @include font($size: 3.6rem, $height: 1.4, $weight: 600);
+    margin-bottom: 7rem;
   }
 }
 
 .acquaintance__subtitle {
   display: flex;
   align-items: center;
-  padding: 0 2rem;
+
+  width: 85%;
+  margin: auto;
+  padding-left: 2rem;
 
   @include font($size: 1rem, $height: 1.5, $weight: 600);
   text-transform: uppercase;
   color: $white;
 
   @include media-tablet {
-    width: 290px;
-    padding-left: 3rem;
+    width: 17rem;
+    padding-left: 4rem;
   }
 }
 
 .acquaintance__link {
-  font-family: "Northwell";
+  font-family: $font-family--northwell;
   @include font($size: 6rem, $weight: 300);
   text-decoration: none;
   color: $danger;
 
   @include media-tablet {
     position: absolute;
+    bottom: -20%;
+    left: 50%;
+  }
+}
 
 .acquaintance__img {
   position: absolute;
