--- a/src/assets/styles/blocks/_two-images.scss
+++ b/src/assets/styles/blocks/_two-images.scss
@@ -63,16 +63,20 @@
 
 .two-images__layer-1 {
   background-image: url("~images/two-images/img-mood-1.jpg");
+  background-image: -webkit-image-set(url("~images/two-images/img-mood-1.webp") 1x);
 }
 
 .two-images__layer-2 {
   background-image: url("~images/two-images/img-mood-2.jpg");
+  background-image: -webkit-image-set(url("~images/two-images/img-mood-2.webp") 1x);
 }
 
 .two-images__layer-3 {
   background-image: url("~images/two-images/img-mood-3.jpg");
+  background-image: -webkit-image-set(url("~images/two-images/img-mood-3.webp") 1x);
 }
 
 .two-images__layer-4 {
   background-image: url("~images/two-images/img-mood-4.jpg");
+  background-image: -webkit-image-set(url("~images/two-images/img-mood-4.webp") 1x);
 }
